# uip

./: .gitignore  802D636F15FBE7A561E9E9B04B4E626AE088B3CE498B1C53A5961272B69A9274.json  Cargo.toml  Readme.markdown  TODO.md  build.rs  makefile  uipd.capnp
ecdsa/: ca.cert  ca.der  ca.key  client.cert  client.fullchain  client.key  client.req  end.cert  end.chain  end.fullchain  end.key  end.req  inter.cert  inter.key  inter.req
ids/: 802D636F15FBE7A561E9E9B04B4E626AE088B3CE498B1C53A5961272B69A9274.cert  802D636F15FBE7A561E9E9B04B4E626AE088B3CE498B1C53A5961272B69A9274.key  BC4FE2064FBC0244E4EAE9FB116C057CC9882686724D7C3BE0F0D8D8D3816B1D.cert  BC4FE2064FBC0244E4EAE9FB116C057CC9882686724D7C3BE0F0D8D8D3816B1D.key
integration/: homerouter.conf  network.py  notes.md
rsa/: ca.cert  ca.der  ca.key  client.cert  client.chain  client.fullchain  client.key  client.req  client.rsa  end.cert  end.fullchain  end.key  end.req  end.rsa  inter.cert  inter.key  inter.req
src/: configuration.rs  connection.rs  id.rs  lib.rs  main.rs  peer_information_base.rs  state.rs  transport.rs  unix_codec.rs  unix_socket.rs  utils.rs
src/data/: identifier.rs  identity.rs  mod.rs  peer.rs  peer_information_base.rs
src/network/: discovery.rs  local_address.rs  mod.rs  socket.rs  state.rs  transport.rs
src/network/change/: debounce.rs  evented_socket.rs  listener.rs  mod.rs  rtnetlink_socket.rs
src/network/discovery/: error.rs  interfaces.rs  mod.rs  upnp_igd.rs
src/network/io/: connection.rs  mod.rs  shared_socket.rs  socket.rs
src/network/protocol/: mod.rs
src/network/transport/: codec.rs  connection.rs  mod.rs  socket.rs  transport.rs
src/rpc/: server.rs
src/unix/: codec.rs  connection.rs  mod.rs  socket.rs  state.rs
