[package]
name = "uip"
version = "0.1.0"
authors = ["Felix Konstantin Maurer <maufl@maufl.de>"]
edition = "2018"

[dependencies]
interfaces = "0.0.4"
bytes = "0.5"
byteorder = "1"
igd = { git = "https://github.com/maufl/rust-igd", branch = "update-hyper", features = ["aio"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
tokio = { version = "0.2.6", features = ["full"] }
tokio-util = { version = "0.2", features = [ "full" ] }
tokio-openssl = "0.4"
pin-project-lite = "0.1"
serde = "1"
serde_json = "1"
rmp-serde = "0.13"
serde_derive = "1"
openssl = "0.10"
log = "0.4"
fern = "0.5"
libc = "0.2"
nix = "0.9"
mio = "0.6"
clap = "2"
rand = "0.4"

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
