[package]
name = "uip"
version = "0.1.0"
authors = ["Felix Konstantin Maurer <maufl@maufl.de>"]
edition = "2018"
default-run = "uipd"

[dependencies]
interfaces = "0.0.4"
bytes = "1"
byteorder = "1"
futures = { version = "0.3" }
futures-util = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = [ "full" ] }
tokio-openssl = "0.6"
webrtc-dtls = "0.7"
webrtc-util = "0.7"
async-trait = "0.1"
pin-project-lite = "0.1"
serde = "1"
rmp-serde = "0.14"
serde_derive = "1"
openssl = "0.10"
log = "0.4"
fern = "0.6"
nix = "0.17"
mio = "0.6"
clap = "2"
rand = "0.7"
toml = "0.5"

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
